k8s/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - loukas.tech
    secretName: loukas-tech-tls
  rules:
  - host: loukas.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-django-service
            port:
              number: 80
